--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
 * {
-	border: 1px dashed red;
 	min-height: 10px;
 	margin: 0;
 	padding: 0;
@@ -55,7 +54,8 @@ div .body-left p {
 }
 input {
 	border: none;
-	border-bottom: 30px;
+	border-color: grey;
+	border-bottom: inset;
 }
 
 .postcard-footer button {
